syntax = "proto3";

option go_package = "micro_arch/catalogue/proto/book";

package book;

service BookService {
  rpc GetBook(GetBookRequest) returns (GetBookResponse) {}
  rpc ListBooks(ListBooksRequest) returns (ListBooksResponse) {}
}

message Book {
    int32 id = 1;
    string title = 2;
    string author = 3;
    int32 price = 4;
}

message GetBookRequest {
  int32 id = 1;
}

message GetBookResponse {
    Book book = 1;
}

message ListBooksRequest {
}

message ListBooksResponse {
    repeated Book books = 1;
}
